2003-12-02  Thomas Vander Stichele <thomas at apestaart dot org>

        * fix documentation build using docbook2..., works on fc1 and rh9
	* fix distcheck on fc1

2003-11-14  Thomas Vander Stichele <thomas at apestaart dot org>

        * put GST_CACHE_DIR in config.h, as ordered by iain

2003-11-14  Thomas Vander Stichele <thomas at apestaart dot org>

        * Slap walters back into place.
	* remove GST_CONFIG_DIR, it isn't used anymore, and it looks like
          GST_CACHE_DIR replaces it (which is up for fixing next)

2003-06-02  Colin Walters  <walters@verbum.org>

	* Take over the world.

2003-03-29  Martin Schulze  <MHL.Schulze@t-online.de>

	* gst/gstelementfactory.c: Add "g_free (dp->license)" in
	gst_element_details_free().
	* gst/gstevent.[ch]: Add function gst_event_get_type() to
	support c++ language binding. Make macros gst_event_ref[_by_count]
	return a GstEvent* instead of a GstData*.
	* gst/gstbuffer.[ch]: Add functions gst_buffer[_pool]_get_type()
	to support c++ language binding.

2003-03-16  Christian Meyer  <chrisime@gnome.org>

	* tools/gst-inspect.c
	(print_prop): Modified to make compile compile with the new introduced
	              function.
	* tools/gst-xmlinspect.c
	(print_prop): ditto.

2003-03-16  Christian Meyer  <chrisime@gnome.org>

	* gst/gstprops.[ch]: Add function gst_props_get_type().
	* gst/gstprops.[ch], gst/gstutils.c, gst/registries/gstxmlregistry.c:
	- Rename gst_props_entry_get_type() -> gst_props_entry_get_props_type().
	- Add gst_props_entry_get_type() (returning the GType).
	* gst/gstcaps.[ch]: Add function gst_caps_get_type().

	Applied patches from Martin Schulze.

2003-01-09  Thomas Vander Stichele <thomas at apestaart dot org>

        * first pass at changing _connect/_disconnect -> _link/_unlink
	* gst/gstcompat.h: created

2002-11-27  Thomas Vander Stichele <thomas at apestaart dot org>

        * ChangeLog: added an entry
        * gst/gst.*: add gst_init_check which can return TRUE or FALSE