@@ -1,3 +1,12 @@
+2003-12-15  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* gst/gst.c: (init_popt_callback):
+	* gst/gstplugin.c: (_gst_plugin_fault_handler_restore),
+	(_gst_plugin_fault_handler_sighandler),
+	(_gst_plugin_fault_handler_setup), (gst_plugin_load_file):
+	Implemented fault handlers for catching SIGSEGV while loading
+        plug-ins
+
 2003-12-02  Thomas Vander Stichele <thomas at apestaart dot org>
 
         * fix documentation build using docbook2..., works on fc1 and rh9
